# ros2_mcp

./: Dockerfile  README.md  pyproject.toml  server.json
.github/workflows/: docker_image.yml  server_tests.yml
docs/: CREATE_PROMPT.md  DEMO_DRONE.md
installation/: README.md
server/: main.py  prompthandler.py  prompts_ros2.py  ros2_manager.py  server.py  tools_ros2.py
tests/: ros2_manager_test.py  tools_ros2_test.py
