[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_server_ros_2"
version = "0.1.0"
description = "MCP Server for ROS 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.4",
    "numpy>=1.21,<2.0", 
    "PyYAML",
    "python-dateutil",
    "pillow",
    "lark"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[project.scripts]
mcp_ros_2_server = "server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
