[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_server_ros_2"
version = "0.1.0"
description = "MCP Server for ROS 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.4",
    "numpy>=1.21,<2.0", 
    "PyYAML",
    "python-dateutil",
    "pillow",
    "lark",
    "tomli>=2.0.1; python_version < '3.11'",
]
[project.optional-dependencies]
custom-prompts = ["extension_prompts"]
[tool.uv.sources]
extension_prompts = { git = "https://github.com/wise-vision/ros2_mcp_prompts.git", rev = "dev" }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[project.scripts]
mcp_ros_2_server = "server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.mcp_ros_2]
custom_prompts = false
prompts_local = false
prompts_path = ""
prompts_module = "extension_prompts"